--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 development:
-	adapter: postgresql
-	database: development
-	username: <%= ENV['PG_USER'] %>
-	password: <%= ENV['PG_PASS'] %>
-	host: localhost
+  adapter: postgresql
+  database: pepsi-ruby
+  username: <%= ENV['PG_USER'] %>
+  password: <%= ENV['PG_PASS'] %>
+  host: localhost
