--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,12 @@
 development:
   adapter: postgresql
   database: pepsi-ruby
-  username: <%= ENV['PG_USER'] %>
-  password: <%= ENV['PG_PASS'] %>
+  username: postgres
+  password: 
+  host: localhost
+test:
+  adapter: postgresql
+  database: pepsi-ruby-test
+  username: postgres
+  password: 
   host: localhost
